Update power management settings in lily58.conf
Enabled deep sleep and adjusted power management settings.

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,16 +1,33 @@
-# Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+# ========================================
+# 电源管理 (强烈推荐开启)
+# ========================================
+# 启用深度睡眠 (省电的关键)
+CONFIG_ZMK_SLEEP=y
+# 900000ms = 15分钟后进入深度睡眠
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
-# Uncomment the following line to increase the keyboard's wireless range
+# ========================================
+# 蓝牙信号增强
+# ========================================
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# Enable eager debouncing
+# ========================================
+# 屏幕显示 (如果你有 OLED 必须加这个)
+# ========================================
+# 开启显示屏支持
+CONFIG_ZMK_DISPLAY=y
+# 如果你的屏幕没有自带休眠动画，建议开启显示状态百分比
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# ========================================
+# 性能设置 (去抖动)
+# ========================================
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
-# Enable ZMK Studio for Realtime Keymap Updates
+# ========================================
+# ZMK Studio (实时改键)
+# ========================================
+# 确保你的仓库支持 ZMK Studio 再开启，否则编译会报错
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
-
-# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-# CONFIG_ZMK_USB_LOGGING=y
