Enable external power in lily58 configuration

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,7 +5,7 @@
 CONFIG_ZMK_SLEEP=y
 # 900000ms = 15分钟后进入深度睡眠
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-
+CONFIG_ZMK_EXT_POWER=y
 # ========================================
 # 蓝牙信号增强
 # ========================================
