--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: glo
+      url-base: https://github.com/glo4037  # 这是 Bongo Cat 模块作者之一
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: v0.3
       import: app/west.yml
+    - name: zmk-bongocat-widget # 引入模块
+      remote: glo
+      revision: main
   self:
     path: config
