Update display configuration for Lily58 keyboard

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -16,6 +16,16 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # ========================================
 # 开启显示屏支持
 CONFIG_ZMK_DISPLAY=y
+
+# 禁用 ZMK 默认的状态屏幕 (必须禁用，否则会冲突)
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+
+# 启用 Bongo Cat 模块
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_BONGOCAT_WIDGET=y
+
+# (可选) 调整 WPM 也就是打字速度的采样，让猫咪反应更灵敏
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # 如果你的屏幕没有自带休眠动画，建议开启显示状态百分比
 # CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
