--- a/build.yaml
+++ b/build.yaml
@@ -13,10 +13,10 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: lily58_left
     snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: lily58_right
     snippet: studio-rpc-usb-uart  # 右手通常不需要studio snippet，但加上也无妨，或者可以直接去掉这行
   - board: nice_nano
